Fix docker-compose file syntax (missing service name) and add container reference in JePL config file. Add when clause to only run a Jenkins jobs for current branch.
Signed-off-by: Samuel Bernardo <samuel@lip.pt>

--- a/.sqa/config_hadolint.yaml
+++ b/.sqa/config_hadolint.yaml
@@ -4,7 +4,8 @@ config:
 sqa_criteria:
   QC.Sty:
     repos:
-      dislib_hadolint:
+      hadolint tool:
+        container: hadolint
         commands:
           - |
             #!/bin/bash
