hadolint image only supports sh, so correcting the command shell
Signed-off-by: Samuel Bernardo <samuel@lip.pt>

--- a/.sqa/config_hadolint.yaml
+++ b/.sqa/config_hadolint.yaml
@@ -8,5 +8,5 @@ sqa_criteria:
         container: hadolint
         commands:
           - |
-            #!/bin/bash
+            #!/bin/sh
             hadolint */Dockerfile* --failure-threshold error
