Only check Dockerfile in root repository (most recently updated)
Signed-off-by: Samuel Bernardo <samuel@lip.pt>

--- a/.sqa/config_hadolint.yaml
+++ b/.sqa/config_hadolint.yaml
@@ -9,4 +9,4 @@ sqa_criteria:
         commands:
           - |
             #!/bin/sh
-            hadolint */Dockerfile* --failure-threshold error
+            hadolint Dockerfile --failure-threshold error
